# batools

./: .gitignore  CMakeLists.txt  README.md  batools.h  playground.cpp
include/: batools_exception.h  binomial_distribution.h  example_binomial_distribution.h  example_central_limit_theorem.h  example_mean_convergence.h  example_normal_distribution.h  normal_distribution.h  numerical_dataset.h  version.h
src/: batools_exception.cpp  binomial_distribution.cpp  example_binomial_distribution.cpp  example_central_limit_theorem.cpp  example_mean_convergence.cpp  example_normal_distribution.cpp  normal_distribution.cpp  numerical_dataset.cpp  version.cpp
